# C_programing2

./: CMakeLists.txt  Makefile
2020-mid/: 5.c  5_factorization  5_factorization.c  6_alpabatPrint.c  7-wordCount.c  8_2dimArray.c  9_wordSort  9_wordSort.c  code.c  readlines.c  test  test.c
2022-final/: 5.c  6.c
2023-mid/: 4  4.c  5  5.c  6  6.c  7  7.c  8  8.c  main  main.c
ch0/: 1-7
ch00/: 1-7.c
ch01/: 1-16  1-16.c  1-6.c
ch02/: 2-1  2-1.c  2-2  2-2-2  2-2-2.c  2-2.c  2-3  2-3.c  2-4  2-4.c  2-5  2-5.c  2-6  2-6.c  2-7  2-7.c  2-8  2-8.c  test  test.c
ch03/: 3-1  3-1.c  3-2  3-2.c  3-3  3-3.c  3-4  3-4.c  3-5  3-5.c  3-6  3-6.c  3-7  3-7.c  3-test  3-test.c
ch04/: 04-5.c  4-1  4-1.c  4-2  4-2.c  4-21  4-21.c  4-26  4-26.c  4-26main.c  4-3  4-3.c  4-4  4-4.c  4-5  4-5.c  4-6  4-6.c  4-7  4-7.c  4-8  4-8.c  4-fibo  4-fibo.c  a.out  getch.c  getop.c  mygetline.c  stack.c  strindex.c
ch05/: 5-1  5-1.c  5-2  5-2.c  5-3  5-3.c  5-4  5-4.c  5-5  5-5.c  5-6  5-6.c  5-7  5-7.c
ch06/: 06-15.c  6-1  6-1.c  6-2  6-2.c  6-3  6-3.c  6-4  6-4.c  input6-3.c
ch07/: 07-11.c
ch0B/: sortbin.c  sortbinstr.c  strtok.c  strtol.c  temp.c
ch1/: 1-13  1-13.c  1-16  1-16.c  1-6
lab1/: 1-5  1-5.c  1-7.c
ncurses/: form.c  hello_world.c
project/p1/: adata.txt  data.txt  help.txt  tel  tel.c  tel2.c  telTree.c  temp.c  text.txt
project/p2/: data.txt  data1.txt  data2.txs~  data2.txt~  data3.txt  form2.c  help.txt  tel-nurses  tel-nurses.c  tel-nurses_mac.c  tel.c
