cmake_minimum_required(VERSION 3.24)
project(C2 C)

set(CMAKE_C_STANDARD 99)
add_executable(ch03_3-2 ch03/3-2.c)
add_executable(ch03_3-test ch03/3-test.c)
add_executable(ch03_3-3 ch03/3-3.c)
add_executable(ch03_3-4 ch03/3-4.c)
add_executable(ch03_3-5 ch03/3-5.c)
add_executable(ch03_3-6 ch03/3-6.c)
add_executable(ch03_3-7 ch03/3-7.c)
add_executable(ch04_4-4 ch04/4-4.c ch04/getch.c ch04/getop.c ch04/stack.c)
add_executable(ch04_4-6 ch04/4-6.c)
add_executable(ch04_4-7 ch04/4-7.c)
add_executable(ch04_4-8 ch04/4-8.c)
add_executable(2020-mid_5_factorization 2020-mid/5_factorization.c)
add_executable(2020-mid_6_alpabatPrint 2020-mid/6_alpabatPrint.c)
add_executable(2020-mid_7-wordCount 2020-mid/7-wordCount.c)
add_executable(2020-mid_8_2dimArray 2020-mid/8_2dimArray.c)