cmake_minimum_required(VERSION 3.24)
project(C2 C)

set(CMAKE_C_STANDARD 99)
add_executable(ch03_3-2 ch03/3-2.c)
add_executable(ch03_3-test ch03/3-test.c)
add_executable(ch03_3-3 ch03/3-3.c)
add_executable(ch03_3-4 ch03/3-4.c)
add_executable(ch03_3-5 ch03/3-5.c)
add_executable(ch03_3-6 ch03/3-6.c)
add_executable(ch03_3-7 ch03/3-7.c)
add_executable(ch04_4-4 ch04/4-4.c ch04/getch.c ch04/getop.c ch04/stack.c)
add_executable(ch04_4-6 ch04/4-6.c)
add_executable(ch04_4-7 ch04/4-7.c)
add_executable(ch04_4-8 ch04/4-8.c)
add_executable(2020-mid_5_factorization 2020-mid/5_factorization.c)
add_executable(2020-mid_6_alpabatPrint 2020-mid/6_alpabatPrint.c)
add_executable(2020-mid_7-wordCount 2020-mid/7-wordCount.c)
add_executable(2020-mid_8_2dimArray 2020-mid/8_2dimArray.c)
add_executable(2020-mid_9_wordSort 2020-mid/9_wordSort.c)
add_executable(2020-mid_test 2020-mid/readlines.c)
add_executable(2020-mid_5 2020-mid/5.c)
add_executable(2020-mid_code 2020-mid/code.c)
add_executable(2023main 2023main.c)
add_executable(ch06_06.15 ch06/06-15.c)
add_executable(ch04_5-1 ch05/5-1.c)
add_executable(ch05_5-2 ch05/5-2.c)
add_executable(ch05_5-3 ch05/5-3.c)
add_executable(ch05_5-4 ch05/5-4.c)
add_executable(ch05_5-5 ch05/5-5.c)
add_executable(ch05_5-6 ch05/5-6.c)
add_executable(ch05_5-7 ch05/5-7.c)
add_executable(2023-mid_6 2023-mid/6.c)
add_executable(2023-mid_8 2023-mid/8.c)
add_executable(2023-mid_main 2023-mid/main.c)
add_executable(ch07_07-11 ch07/07-11.c)
add_executable(ch06_6-1 ch06/6-1.c)
add_executable(ch06_6-2 ch06/6-2.c)
add_executable(ch06_6-3 ch06/6-3.c)
add_executable(ch06_input6-3 ch06/input6-3.c)
add_executable(ch06_6-4 ch06/6-4.c)
add_executable(ch0B_strtok ch0B/strtok.c)
add_executable(ch0B_strtol ch0B/strtol.c)
add_executable(ch0B_sortbin ch0B/sortbin.c)
add_executable(ch0B_sortbinstr ch0B/sortbinstr.c)
add_executable(ch0B_temp ch0B/temp.c)
add_executable(project_p1_tel project/p1/tel2.c)
add_executable(project_p1_tel2 project/p1/tel1.c)
add_executable(project_p1_telTree project/p1/telTree.c)

find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
add_executable(ncurses_hello_world ncurses/hello_world.c)
add_executable(ncurses_form ncurses/form.c)
add_executable(project_p2_tel project/p2/tel.c)
add_executable(project_p2_tel-nurses_mac project/p2/tel-nurses_mac.c)
target_link_libraries(ncurses_hello_world ${CURSES_LIBRARIES})
target_link_libraries(ncurses_form ${CURSES_LIBRARIES})
target_link_libraries(project_p2_tel ${CURSES_LIBRARIES})
target_link_libraries(project_p2_tel-nurses_mac ${CURSES_LIBRARIES})



add_executable(2022-final_5 2022-final/5.c)
add_executable(2022-final_6 2022-final/6.c)